WebCore:

2008-04-28  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=18779

        The arguments in drawImage were reversed when I switched away from the image buffer method.

        Reviewed by Tim Hatcher

        Added fast/canvas/drawImage.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):

LayoutTests:

2008-04-28  David Hyatt  <hyatt@apple.com>

        Add layout test for canvas.

        Reviewed by Tim Hatcher

        * fast/canvas/drawImage.html: Added.
        * platform/mac/fast/canvas/drawImage-expected.checksum: Added.
        * platform/mac/fast/canvas/drawImage-expected.png: Added.
        * platform/mac/fast/canvas/drawImage-expected.txt: Added.



Canonical link: https://commits.webkit.org/25929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32651 268f45cc-cd09-0410-ab3c-d52691b4dbfc