WebCore/html/CanvasRenderingContext2D.cpp
@@ -1023,7 +1023,7 @@ void CanvasRenderingContext2D::drawImage(HTMLCanvasElement* canvas, const FloatR
         m_canvas->setOriginTainted();
 
     willDraw(destRect);
-    c->drawImage(buffer->image(), sourceRect, destRect);
+    c->drawImage(buffer->image(), destRect, sourceRect);
 }
 
 // FIXME: Why isn't this just another overload of drawImage? Why have a different name?
